<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_from_nowplaying"
            android:src="@drawable/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SongTitleStyle"
            android:layout_centerInParent="true"
            android:text="@string/now_playing"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/current_album_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubheadingStyle"
        android:text="@string/album_name"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/current_song_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        style="@style/SubheadingStyle"
        android:text="@string/song_title"/>

    <TextView
        android:id="@+id/current_artist_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        style="@style/SubheadingStyle"
        android:layout_weight="1"
        android:text="@string/artist_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/play_icon"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next_icon"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>